--- a/html-source/make-reservation.html
+++ b/html-source/make-reservation.html
@@ -72,35 +72,38 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h1 class="text-center mt-4">This will be the contact page</h1>
-				<p>
-					Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-					to remember.
-					Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-					to remember.
-					Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-					to remember.
-					Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-					to remember.
-					Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-					to remember.
-					Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-					to remember.
-					Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-					to remember.
-				</p>
-			</div>
-		</div>
+				<h1>Make reservation</h1>
+				<form action="" method="POST" novalidate>
+					<div class="mb-3">
+						<label for="first_name" class="form-label">First name:</label>
+						<input type="text" name="first_name" id="first_name" class="form-control" required
+							autocomplete="off">
+					</div>
+					<div class="mb-3">
+						<label for="last_name" class="form-label">Last name:</label>
+						<input type="text" name="last_name" id="last_name" class="form-control" required
+							autocomplete="off">
+					</div>
+					<div class="mb-3">
+						<label for="email" class="form-label">Email:</label>
+						<input type="text" name="email" id="email" class="form-control" required autocomplete="off">
+					</div>
+					<div class="mb-3">
+						<label for="phone" class="form-label">Phone number:</label>
+						<input type="text" name="phone" id="phone" class="form-control" required autocomplete="off">
+					</div>
 
-		<div class="row">
+					<hr>
 
-			<div class="col text-center">
-
-				<a href="/make-reservation-ms" class="btn btn-success">Check Availability</a>
-
+					<input type="submit" class="btn btn-primary" value="Make Reservation">
+				</form>
 			</div>
 		</div>
 	</div>
+
+
+
+
 
 
 	<div class="row my-footer">
