--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -1,121 +1,181 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-	    <meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <title>Major's Suite</title>
 
-    	<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Major's Suite</title>
 
-		<style>
-			.my-footer {
-				height: 5em;
-				background-color: #163b65;
-				margin-top: 1.5em;
-				padding: 1em;
-				color: #FFFFFF;
-				font-size: 80%
-			}
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-			.room-image{
-				width: 50%
-			}
+	<style>
+		.my-footer {
+			height: 5em;
+			background-color: #163b65;
+			margin-top: 1.5em;
+			padding: 1em;
+			color: #FFFFFF;
+			font-size: 80%
+		}
 
-
-			p {
-
-			}
-		</style>
-	</head>
-
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Rooms
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="generals.html">General's Quarters</a></li>
-            <li><a class="dropdown-item" href="majors.html">Major's Suite</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book Now</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+		.room-image {
+			width: 50%
+		}
 
 
-<div class="container">
+		.redText {
+			color: red;
+		}
+	</style>
+</head>
 
-	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-6 ">
-			<h1 class="mt-4">Search for availability</h1>
-			
-
-			<form action="reservation.html" method="get">
-			  <div class="row">
-
-				  <div class="col">
-				    <label for="start_date" class="form-label">Starting Date</label>
-				    <input required type="date" class="form-control" name="start_date" id="start_date" aria-describedby="startDateHelp">
-				    <div id="emailHelp" class="form-text">Enter your starting date in the form of YYYY-MM-DD.</div>
-				   </div>
-				   <div class="col">
-				    <label for="ending_date" class="form-label">Ending Date</label>
-				    <input required type="date" class="form-control" name="ending_date" id="ending_date" aria-describedby="endDateHelp">
-				    <div id="emailHelp" class="form-text">Enter your ending date in the form of YYYY-MM-DD.</div>
-				  </div>
-		
-			  </div>
-			  <div class="mt-3">
-			  	<button type="submit" class="btn btn-primary">Search Availability</button>
-			  </div>
-
-			</form>
-		
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">
+							Rooms
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="generals.html">General's Quarters</a></li>
+							<li><a class="dropdown-item" href="majors.html">Major's Suite</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book Now</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+					</li>
+				</ul>
+			</div>
 		</div>
+	</nav>
+
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-md-3"></div>
+			<div class="col-md-6 ">
+				<h1 class="mt-4">Search for availability</h1>
+
+
+				<form action="reservation.html" method="GET" class="needs-validation" novalidate>
+					<div class="row">
+
+						<div class="col">
+							<label for="start_date" class="form-label">Starting Date</label>
+							<input required type="date" class="form-control" name="start_date" id="start_date"
+								aria-describedby="startDateHelp">
+							<div id="emailHelp" class="form-text">Enter your starting date in the form of YYYY-MM-DD.
+							</div>
+						</div>
+						<div class="col">
+							<label for="ending_date" class="form-label">Ending Date</label>
+							<input required type="date" class="form-control" name="ending_date" id="ending_date"
+								aria-describedby="endDateHelp">
+							<div id="emailHelp" class="form-text">Enter your ending date in the form of YYYY-MM-DD.
+							</div>
+						</div>
+
+					</div>
+					<div class="mt-3">
+						<button type="submit" class="btn btn-primary">Search Availability</button>
+					</div>
+
+				</form>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col">
+				<p id="myParagrah">This is some text.</p>
+				<p>
+					<button id="colorButton" class="btn btn-outline-secondary">Click me</button>
+				</p>
+			</div>
+		</div>
+
 	</div>
-</div>
 
 
 	<div class="row my-footer">
-		<div class="col">	
-			Left		
+		<div class="col">
+			Left
 		</div>
 		<div class="col">
-			Middle		
+			Middle
 		</div>
 		<div class="col">
-			Right			
+			Right
 		</div>
 	</div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+		integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+		integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+		crossorigin="anonymous"></script>
 
-	</body>
+
+	<script>
+		console.log("I am printing for javascript");
+
+		(function () {
+			'use strict'
+			// Fetch all the forms we want to apply custom Bootstrap validation styles to
+			let forms = document.querySelectorAll('.needs-validation')
+			// Loop over them and prevent submission
+			Array.prototype.slice.call(forms)
+				.forEach(function (form) {
+					form.addEventListener('submit', function (event) {
+						if (!form.checkValidity()) {
+							event.preventDefault()
+							event.stopPropagation()
+						}
+						form.classList.add('was-validated')
+					}, false)
+				})
+		})();
+
+		document.getElementById("colorButton").addEventListener("click", function () {
+
+			let myEl = document.getElementById("myParagrah");
+
+			if (myEl.classList.contains("redText")) {
+				myEl.classList.remove("redText");
+			} else {
+				myEl.classList.add("redText");
+			}
+
+		})
+
+
+	</script>
+
+
+
+</body>
 
 </html>
