--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -11,6 +11,11 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
+	<link rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
+
+
+
 	<style>
 		.my-footer {
 			height: 5em;
@@ -80,24 +85,25 @@
 
 
 				<form action="reservation.html" method="GET" class="needs-validation" novalidate>
+
+
 					<div class="row">
-
 						<div class="col">
-							<label for="start_date" class="form-label">Starting Date</label>
-							<input required type="date" class="form-control" name="start_date" id="start_date"
-								aria-describedby="startDateHelp">
-							<div id="emailHelp" class="form-text">Enter your starting date in the form of YYYY-MM-DD.
+							<div class="row" id="reservation-dates">
+								<div class="col">
+									<input required type="text" class="form-control" name="start" placeholder="Arrival">
+								</div>
+
+								<div class="col">
+									<input required type="text" class="form-control" name="end" placeholder="Departure">
+								</div>
+
 							</div>
 						</div>
-						<div class="col">
-							<label for="ending_date" class="form-label">Ending Date</label>
-							<input required type="date" class="form-control" name="ending_date" id="ending_date"
-								aria-describedby="endDateHelp">
-							<div id="emailHelp" class="form-text">Enter your ending date in the form of YYYY-MM-DD.
-							</div>
-						</div>
-
 					</div>
+
+					<hr>
+
 					<div class="mt-3">
 						<button type="submit" class="btn btn-primary">Search Availability</button>
 					</div>
@@ -114,6 +120,8 @@
 				</p>
 			</div>
 		</div>
+
+
 
 	</div>
 
@@ -137,6 +145,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
 		integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
 		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
 
 
 	<script>
@@ -170,6 +179,16 @@
 			}
 
 		})
+
+		// const elem = document.querySelector('input[name="start_date"]');
+		// const datepicker = new Datepicker(elem, {
+
+		// });
+
+		const elem = document.getElementById('reservation-dates');
+		const rangepicker = new DateRangePicker(elem, {
+			format: "yyyy-mm-dd",
+		});
 
 
 	</script>
